# SpotHound

./: .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  selftest.py
backend/app/: config.py  deps.py  engine.py  main.py  models.py  notify.py  scheduler.py  schemas.py  security.py  seed.py  sync.py  targets_data.py
backend/app/routers/: admin.py  auth.py  targets.py  telegram.py  users.py
backend/app/spots/: __init__.py  base.py  bc_parks_alouette_pm.py  buntzen_lake_all_day.py  render.py
docs/: ADDING_A_SPOT.md  DEPLOY.md  PLAN.md  ROADMAP.md
frontend/: .env.example  Caddyfile  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  types.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  TargetDetail.tsx
